--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 
-.container {
+.container li {
     background-color: rgb(197, 223, 136);
     list-style-type: none;
 }
